--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,3 +1,5 @@
+<title>Página Inicial</title>
+
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}                
