Atualizando para parte 6

--- a/project/polls/templates/polls/results.html
+++ b/project/polls/templates/polls/results.html
@@ -1,11 +1,17 @@
 <title>Votação</title>
 
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+<div>
 <h1>{{ question.question_text }}</h1>
 
-<ul>
+
 {% for choice in question.choice_set.all %}
     <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
 {% endfor %}
-</ul>
+
 
 <a href="{% url 'polls:detail' question.id %}">Votar novamente?</a>
+<a href="{% url 'polls:index' %}">Retornar</a>
+
+</div>
