--- a/project/polls/templates/polls/detail.html
+++ b/project/polls/templates/polls/detail.html
@@ -1,5 +1,8 @@
 <title>Detalhes</title>
 
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+<div>
 <h1>{{ question.question_text }}</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -12,3 +15,4 @@
 {% endfor %}
 <input type="submit" value="Vote">
 </form>
+</div>
